# Sound2Light

./: .gitignore  CMakeLists.txt
doc/: s2l_changelog.md
src/: BPMDetector.cpp  BPMDetector.h  BPMTapDetector.h  CircularBuffer.h  LICENSE.txt  MonoAudioBuffer.h  OSCNetworkManager.cpp  QAudioInputWrapper.cpp  QAudioInputWrapper.h  S2L.pro  ScaledSpectrum.h  versionInfo.h
src/qml/: BPMSettings.qml  BandpassPreviewInSpectrum.qml  OscLogDialog.qml  PresetListDialog.qml  PresetsDialog.qml  SettingsDialog.qml  SpectrumWithControls.qml  TriggerSettings.qml  TriggerSettingsLegend.qml  main.qml
src/qml/style/: DarkSplitView.qml
